fix: Fixing main section on mobile

--- a/src/app/template/warp-container/warp-container.component.scss
+++ b/src/app/template/warp-container/warp-container.component.scss
@@ -1,3 +1,10 @@
 .warp-container {
     display: flex;
+    flex-direction: row;
+}
+
+@media screen and (orientation:portrait) {
+    .warp-container {
+        flex-direction: column;
+    }   
 }
