--- a/src/app/template/warp/warp.component.scss
+++ b/src/app/template/warp/warp.component.scss
@@ -25,3 +25,9 @@
     background-color: $blue;
     color: $blue-text;
 }
+
+@media screen and (orientation:portrait) {
+    .warp-content {    
+        height: 50vh;
+    }
+}
